Feat(app): Added support for choosing transcribing or processing the youtube video
